// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component Link function HubSpot CTA renders correctly 1`] = `
<button
  action="[object Object]"
  type="button"
>
  String
</button>
`;

exports[`Link component Link function ensure clicking Calculator link works 1`] = `[Function]`;

exports[`Link component Link function ensure clicking Dialog link works 1`] = `[Function]`;

exports[`Link component Link function ensure clicking Visualiser link works 1`] = `[Function]`;

exports[`Link component Link function ensure clicking link works 1`] = `[Function]`;

exports[`Link component Link function handles parameters being non-null properly 1`] = `[Function]`;

exports[`Link component Link function returns a Link correctly 1`] = `
<button
  action="[object Object]"
  type="button"
>
  string
</button>
`;

exports[`Link component Link function returns a Link correctly with Dialog promo 1`] = `[Function]`;

exports[`Link component getCTA function returns a cta object with a Promo cta 1`] = `
Object {
  "action": Object {
    "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"https://www.external.co.uk\\",\\"label\\":\\"string\\"}",
    "href": "https://www.external.co.uk",
    "model": "htmlLink",
    "onClick": [Function],
    "rel": "noopener noreferrer",
    "target": "_blank",
  },
  "label": "string",
}
`;

exports[`Link component getCTA function returns a cta object with a simple page cta 1`] = `
Object {
  "action": Object {
    "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"https://www.external.co.uk\\",\\"label\\":\\"string\\"}",
    "href": "https://www.external.co.uk",
    "model": "htmlLink",
    "onClick": [Function],
    "rel": "noopener noreferrer",
    "target": "_blank",
  },
  "label": "string",
}
`;

exports[`Link component getCTA function returns a cta object with page 1`] = `
Object {
  "action": Object {
    "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"/no/contact-us\\",\\"label\\":\\"Go to Page\\"}",
    "linkComponent": [MockFunction],
    "model": "routerLink",
    "onClick": [Function],
    "to": "/no/contact-us",
  },
  "label": "Go to Page",
}
`;

exports[`Link component getCTA function returns a null object when a simple page without cta 1`] = `null`;

exports[`Link component getCTA function returns a null object with page with empty path 1`] = `null`;

exports[`Link component getCTA function returns a null object with page without path 1`] = `null`;

<<<<<<< HEAD
exports[`Link component getClickableActionFromUrl function internal urls doesn't open in a new window 1`] = `
Object {
  "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"http://localhost\\"}",
  "href": "http://localhost",
  "model": "htmlLink",
  "onClick": [Function],
=======
exports[`Link component getClickableActionFromUrl function override gtm correctly 1`] = `
Object {
  "data-gtm": "{\\"id\\":\\"foo1\\",\\"label\\":\\"foo\\",\\"action\\":\\"foo.com\\"}",
  "href": "foo.com",
  "model": "htmlLink",
  "onClick": [Function],
  "rel": "noopener noreferrer",
  "target": "_blank",
>>>>>>> 4289bcb0f (refactor(servicelocator): function to handle gtm)
}
`;

exports[`Link component getClickableActionFromUrl function returns a Link router to page path 1`] = `
Object {
  "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"/en/some-page\\"}",
  "linkComponent": [MockFunction],
  "model": "routerLink",
  "onClick": [Function],
  "to": "/en/some-page",
}
`;

exports[`Link component getClickableActionFromUrl function returns a url 1`] = `
Object {
  "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"http://example.com\\"}",
  "href": "http://example.com",
  "model": "htmlLink",
  "onClick": [Function],
  "rel": "noopener noreferrer",
  "target": "_blank",
}
`;

exports[`Link component getClickableActionFromUrl function returns asset returns correctly 1`] = `
Object {
  "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"assetUrl\\",\\"label\\":\\"ImALabel\\"}",
  "href": "assetUrl",
  "model": "download",
  "onClick": [Function],
}
`;

exports[`Link component getClickableActionFromUrl function returns external returns correctly 1`] = `
Object {
  "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"/en/some-page\\",\\"label\\":\\"ImALabel\\"}",
  "linkComponent": [MockFunction],
  "model": "routerLink",
  "onClick": [Function],
  "to": "/en/some-page",
}
`;
